octocat image attached

--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
         <div class="small"><a href="https://parikshitgupta.in">© Parikshit .G</a></div>
       <div id="upload">Drop an audio file here</div><br><br>
         <br>
-        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />
+        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><br>
+        <a href="https://github.com/parikshitgupta1"><img src="./octocat.png" width="200" height="200" title="Octocat" alt="Octocat"></a>
     </div>
   </div>
 
