--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music Visualizer</title>
+  <title>Audio Visualizer 🎧</title>
+  <meta name="description" content="An amusing audio visualizer which reacts on the beats & tones of the music!"/>
   <script src="lib/p5.min.js"></script>
   <script src="lib/p5.speech.js"></script>
   <script src="lib/p5.sound.js"></script>
@@ -149,7 +150,7 @@
 <body>
   <div class="container">
     <div class="nav">
-      <div class="welcome">Welcome to Music Visualizer</div><br>
+      <div class="welcome">Welcome to Audio Visualizer</div><br>
         <div class="small"><a href="https://parikshitgupta.in">© Parikshit .G</a></div>
       <div id="upload">Drop an audio file here</div><br><br>
         <br>
